fix: use mediapipe::file::GetContents to parse serialized matrix data
- it feels wrong to do this, but previous solution did not compile
- this solution compiles

TODO:
- check if parsing is correct

--- a/mediapipe_api/framework/formats/BUILD
+++ b/mediapipe_api/framework/formats/BUILD
@@ -74,7 +74,8 @@ cc_library(
         "//mediapipe_api/external/absl:statusor",
         "//mediapipe_api/framework:packet",
         "@com_google_mediapipe//mediapipe/framework/formats:matrix",
-        "@com_google_mediapipe//mediapipe/framework/formats:matrix_data_cc_proto"
+        "@com_google_mediapipe//mediapipe/framework/formats:matrix_data_cc_proto",
+        "@com_google_mediapipe//mediapipe/framework/port:file_helpers",
     ],
     alwayslink = True,
 )
