float_vector_frame C++ helper functions
- native cpp functions to return vector<float> as float[]

--- a/mediapipe_api/framework/formats/BUILD
+++ b/mediapipe_api/framework/formats/BUILD
@@ -81,6 +81,19 @@ cc_library(
 )
 
 cc_library(
+    name = "float_vector_frame",
+    srcs = ["float_vector_frame.cc"],
+    hdrs = ["float_vector_frame.h"],
+    deps = [
+        "//mediapipe_api:common",
+        "//mediapipe_api/external/absl:status",
+        "//mediapipe_api/external/absl:statusor",
+        "//mediapipe_api/framework:packet",
+    ],
+    alwayslink = True,
+)
+
+cc_library(
     name = "rect",
     srcs = ["rect.cc"],
     hdrs = ["rect.h"],
